tests/rustdoc-ui/invalid_associated_const.stderr
error[E0229]: associated type bindings are not allowed here
  --> $DIR/invalid_associated_const.rs:4:17
   |
LL |     type A: S<C<X = 0i32> = 34>;
   |                 ^^^^^^^^ associated type not allowed here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0229`.
